<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnSearch_label">Search</string>
    <string name="etQuery_hint">Enter Search Term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_advanced_search">SearchSettings</string>
    <string name="advanced_search_option_label">Search Settings</string>
    <string name="image_size_label">Image Size</string>
    <string name="color_filter_label">Color Filter</string>
    <string name="image_type_label">Image Type</string>
    <string name="save_label">Save</string>
    <string name="load_more_label">Load More</string>
    <string name="site_filter_label">Site Filter</string>

</resources>
